<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="ApplicationName">Dictionary example</string>
	<string name="RadioButtonAll">all</string>
	<string name="RadioButtonTerm">term</string>
	<string name="RadioButtonDescription">description</string>
	<string name="InputHint">Search term</string>
	<string name="ButtonSearch">Search</string>
	<string name="ResultsTitle">Results</string>
	<string name="ErrorSearchTermTooShort">Search term too short!</string>
	<string name="ErrorDictionaryNotExist">Dictionary does not exist!</string>
	<string name="NoticeNoHits">No hits!</string>
	<string name="MenuSettings">Settings</string>
	<string name="MenuExit">Exit</string>

	<string name="SettingsTitle">Settings</string>
	<string name="SettingsSortBy">Result sorting</string>
	<string name="SettingsSortBySummary">Sorting of result by term or sequence</string>
	<string name="SortedBy">Sorted by</string>
	<string name="SettingsFullscreen">Fullscreen mode</string>
	<string name="SettingsFullscreenSummary">Application will be fullscreen</string>

	<string name="GeneralInfoTitle">General information</string>
	<string name="SettingsVersionNumber">Application version</string>

	<string-array name="listArraySort">
		<item>term</item>
		<item>sequence</item>
	</string-array>
	<string-array name="listValuesSort">
		<item>0</item>
		<item>1</item>
	</string-array>
</resources>